--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
           <img  src="mobile (2).png" alt="San Francisco">
           <p><strong>CoShell</strong></p>
           <p>Sun. 29 November 2023</p>
-          <button class="btn" >View</button>
+          <button class="btn"><a href="wearable.html">View</a></button>
         </div>
       </div>
 
@@ -115,7 +115,7 @@
           <img  src="coffee website.png" alt="Paris">
           <p><strong>Coffee Beans Website</strong></p>
           <p>Fri. 27 November 2023</p>
-          <button class="btn">View</button>
+          <button class="btn"><a href="desktop.html">View</a></button>
         </div>
       </div>
       <div class="col-sm-4">
@@ -123,7 +123,7 @@
           <img  src="News.png" alt="New York">
           <p><strong>News Appliction</strong></p>
           <p>Sat. 28 November 2023</p>
-          <button class="btn">View</button>
+          <button class="btn"><a href="mobile.html">View</a></button>
         </div>
       </div>
 
